--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,12 @@
 name: Build container image
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main]
   schedule:
-    - cron: '05 10 * * *'  # 10:05am UTC everyday
+    - cron: '05 10 * * *'
   push:
-    branches:
-      - main
-    paths-ignore:
-      - '**/README.md'
+    branches: [main]
+    paths-ignore: ['**/README.md']
   workflow_dispatch:
 
 env:
@@ -19,7 +16,6 @@ env:
   IMAGE_NAME: "${{ github.event.repository.name }}"
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"
   DEFAULT_TAG: "latest"
-  BUILD_STORAGE_PATH: ${{ github.workspace }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}-${{ inputs.brand_name}}-${{ inputs.stream_name }}
@@ -41,24 +37,21 @@ jobs:
           echo "IMAGE_REGISTRY=${IMAGE_REGISTRY,,}" >> ${GITHUB_ENV}
           echo "IMAGE_NAME=${IMAGE_NAME,,}" >> ${GITHUB_ENV}
 
-      - name: Set build storage path
+      - name: Set build storage path and mount /mnt if needed
         run: |
-          if [ -d /mnt ]; then
-            if ! mountpoint -q /mnt; then
-              echo "/mnt not mounted, mounting tmpfs"
-              sudo mount -t tmpfs -o size=16G tmpfs /mnt
-            fi
-            echo "BUILD_STORAGE_PATH=/mnt" >> $GITHUB_ENV
-            df -h /mnt || true
-          else
-            echo "BUILD_STORAGE_PATH=${GITHUB_WORKSPACE}" >> $GITHUB_ENV
-            df -h "${GITHUB_WORKSPACE}" || true
+          if [ ! -d /mnt ]; then
+            sudo mkdir -p /mnt
           fi
+          if ! mountpoint -q /mnt; then
+            echo "/mnt not mounted, mounting tmpfs"
+            sudo mount -t tmpfs -o size=16G tmpfs /mnt
+          fi
+          echo "BUILD_STORAGE_PATH=/mnt" >> $GITHUB_ENV
 
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Uncomment and use if builds are too big
+      # Uncomment if you need extra space
       # - name: Maximize build space
       #   uses: ublue-os/remove-unwanted-software@v7
       #   with:
@@ -70,7 +63,7 @@ jobs:
       - name: Get current date
         id: date
         run: |
-          echo "date=$(date -u +%Y\-%m\-%d\T%H\:%M\:%S\Z)" >> $GITHUB_OUTPUT
+          echo "date=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_OUTPUT
 
       - name: Image Metadata
         uses: docker/metadata-action@v5
@@ -146,7 +139,7 @@ jobs:
         id: push
         env:
           REGISTRY_USER: ${{ github.actor }}
-          REGISTRY_PASSWORD: ${{ github.token }}
+          REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         with:
           registry: ${{ env.IMAGE_REGISTRY }}
           image: ${{ env.IMAGE_NAME }}
@@ -166,6 +159,5 @@ jobs:
             cosign sign -y --key env://COSIGN_PRIVATE_KEY $IMAGE_FULL:$tag
           done
         env:
-          TAGS: ${{ steps.push.outputs.digest }}
           COSIGN_EXPERIMENTAL: false
-          COSIGN_PRIVATE_KEY: ${{ secrets.SIGNING_SECRET }}
+          COSIGN_PRIVATE_KEY: ${{ secrets.SIGNING_SECRET }} 
